--- a/基础篇.md
+++ b/基础篇.md
@@ -488,7 +488,7 @@ System.out.println(person1.getAddress() == person1Copy.getAddress());
 
 从输出结构就可以看出，虽然 `person1` 的克隆对象和 `person1` 包含的 `Address` 对象已经是不同的了。
 
-![image-20220819142438138](D:\study\八股文\img\image-20220819142438138.png)
+![image-20220819142438138](img/image-20220819142438138.png)
 
 #### 10.面向对象和面向过程的区别。【⭐⭐⭐】
 
