--- a/基础篇.md
+++ b/基础篇.md
@@ -488,7 +488,7 @@ System.out.println(person1.getAddress() == person1Copy.getAddress());
 
 从输出结构就可以看出，虽然 `person1` 的克隆对象和 `person1` 包含的 `Address` 对象已经是不同的了。
 
-![image-20220819142438138](img/image-20220819142438138.png)
+![image](https://user-images.githubusercontent.com/92045271/185589456-80432a6e-3e37-4be2-a015-a9e95ec9c2d5.png)
 
 #### 10.面向对象和面向过程的区别。【⭐⭐⭐】
 
@@ -611,7 +611,7 @@ abstract class AbstractStringBuilder implements Appendable, CharSequence {
 
 **Java 异常类层次结构图概览** ：
 
-![Java 异常类层次结构图](D:\study\八股文\img\types-of-exceptions-in-java.png)
+![image](https://user-images.githubusercontent.com/92045271/185589119-2d0595d9-cb1f-480c-89cb-f775a4beed66.png)
 
 **Exception 和 Error 有什么区别？**
 
